Fix layout bug on Safari

--- a/css/main.css
+++ b/css/main.css
@@ -747,7 +747,7 @@ textarea {
       .involvement ul > li a:before {
         content: '';
         display: block;
-        margin-top: 100%; }
+        padding-top: 100%; }
     .involvement ul > li img {
       -webkit-transition: all 250ms linear;
       -o-transition: all 250ms linear;
@@ -758,7 +758,7 @@ textarea {
       bottom: 0;
       right: 0;
       max-width: 100%;
-      margin-top: -100%;
+      margin-top: 0%;
       -webkit-filter: grayscale(100%);
       filter: grayscale(100%); }
       .involvement ul > li img:hover {
